@@ -11,11 +11,6 @@ java {
     }
 }
 
-// Enable preview language features
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
 repositories {
     mavenCentral()
     maven {
@@ -24,6 +19,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.postgresql:postgresql:42.5.0'
+    implementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
